Add notes for 1st level files

--- a/assets/stylesheets/source/components/components.scss
+++ b/assets/stylesheets/source/components/components.scss
@@ -1,1 +1,9 @@
+// ============================================================================
+// Components
+// ============================================================================
+
+// A component is a discrete, reuseable pattern that can be used throughout a
+// project without breaking. In general, avoid element selectors and IDs in
+// favor of classes.
+
 // @import "component-name";
