--- a/assets/stylesheets/source/global/global.scss
+++ b/assets/stylesheets/source/global/global.scss
@@ -1,2 +1,10 @@
+// ============================================================================
+// Global settings
+// ============================================================================
+
+// Import global variables and mixins here. Anything that lives on this level
+// should be generic. If you have component-specific mixins or variables, they
+// should exist at the component level.
+
 @import "mixins/mixins";
 // @import "variables/variables";
