--- a/assets/stylesheets/source/layouts/layouts.scss
+++ b/assets/stylesheets/source/layouts/layouts.scss
@@ -1,1 +1,8 @@
-// @import "layout-name";
+// ============================================================================
+// Layouts
+// ============================================================================
+
+// Import your project-specific styles here. Separate into separate files by
+// page, template, controller, or whatever makes sense based on the application
+
+// @import "about-us";
