--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -1,1 +1,13 @@
+// ============================================================================
+// Base styles
+// ============================================================================
+
+// Base styles are almost exclusively single element selectors but could include
+// attribute selectors, pseudo-class selectors, child selectors or sibling
+// selectors. They define the default styling for how that element should look
+// in all occurrences on the page.
+// @source: http://smacss.com/book/type-base
+
 // @import "base-style";
+
+
