Add base resets

--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -8,6 +8,5 @@
 // in all occurrences on the page.
 // @source: http://smacss.com/book/type-base
 
-// @import "base-style";
-
-
+@import "normalize";
+@import "print";
