--- a/assets/stylesheets/source/base/_print.scss
+++ b/assets/stylesheets/source/base/_print.scss
@@ -2,7 +2,7 @@
 // Print
 // ============================================================================
 
-// @link: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
+// @source: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
 
 @media print {
   * {
