--- a/assets/stylesheets/source/base/_normalize.scss
+++ b/assets/stylesheets/source/base/_normalize.scss
@@ -1,7 +1,8 @@
 // ============================================================================
 // Normalize
-// normalize.css v2.1.3 | MIT License | git.io/normalize
 // ============================================================================
+
+// @source: http://git.io/normalize/
 
 // HTML5 display definitions
 // ----------------------------------------------------------------------------
