--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -8,5 +8,9 @@
 // in all occurrences on the page.
 // @source: http://smacss.com/book/type-base
 
+// Reset
 @import "normalize";
 @import "print";
+
+// Base
+@import "scaffolding";
