--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -8,10 +8,9 @@
   <meta name="description" content="">
   <meta name="generator" content="kss-node" />
   <meta name="viewport" content="width=device-width">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="public/kss.css">
-  <link rel="stylesheet" href="public/style.css">
-  <title>KSS: Living Styleguide</title>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/stylesheets/docs.min.css">
+  <title>Proto Living Styleguide</title>
 </head>
 <body>
   <nav class="test-high-level-nav">
