Add a bunch of variables

--- a/assets/stylesheets/source/global/global.scss
+++ b/assets/stylesheets/source/global/global.scss
@@ -7,4 +7,4 @@
 // should exist at the component level.
 
 @import "mixins/mixins";
-// @import "variables/variables";
+@import "variables/variables";
