--- a/assets/stylesheets/source/base/_code.scss
+++ b/assets/stylesheets/source/base/_code.scss
@@ -2,6 +2,23 @@
 // Code
 // ============================================================================
 
+// Variables
+// ----------------------------------------------------------------------------
+
+$code-color:                  #c7254e !default;
+$code-bg:                     #f9f2f4 !default;
+
+$kbd-color:                   #fff !default;
+$kbd-bg:                      #333 !default;
+
+$pre-bg:                      #f5f5f5 !default;
+$pre-color:                   $gray-dark !default;
+$pre-border-color:            #ccc !default;
+$pre-scrollable-max-height:   340px !default;
+
+// Styles
+// ----------------------------------------------------------------------------
+
 // Inline and block code styles
 code,
 kbd,
