Remove docs and add CSS comments

--- a/assets/stylesheets/source/base/_code.scss
+++ b/assets/stylesheets/source/base/_code.scss
@@ -1,6 +1,17 @@
-// ============================================================================
-// Code
-// ============================================================================
+
+// Title:         Code
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
+
+
+// Table of contents
+// ----------------------------------------------------------------------------
+
+// Variables
+// Base
 
 // Variables
 // ----------------------------------------------------------------------------
@@ -16,7 +27,7 @@ $pre-color:                   $gray-dark !default;
 $pre-border-color:            #ccc !default;
 $pre-scrollable-max-height:   340px !default;
 
-// Styles
+// Base
 // ----------------------------------------------------------------------------
 
 // Inline and block code styles
