--- a/assets/stylesheets/source/base/_print.scss
+++ b/assets/stylesheets/source/base/_print.scss
@@ -1,8 +1,11 @@
-// ============================================================================
-// Print
-// ============================================================================
 
-// @source: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
+// Title:         Print
+// Author:        Paul Irish
+// Source:        https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       4.3.0
+
 
 @media print {
   * {
