--- a/assets/stylesheets/source/base/_normalize.scss
+++ b/assets/stylesheets/source/base/_normalize.scss
@@ -1,8 +1,23 @@
-// ============================================================================
-// Normalize
-// ============================================================================
 
-// @source: http://git.io/normalize/
+// Title:         Normalize
+// Author:        Nicholas Gallagher & Jonathan Neal
+// Source:        git.io/normalize
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       2.1.3
+
+
+// Table of contents
+// ----------------------------------------------------------------------------
+
+// HTML5 display definitions
+// Base
+// Links
+// Typography
+// Embedded content
+// Figures
+// Forms
+// Tables
 
 // HTML5 display definitions
 // ----------------------------------------------------------------------------
