--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -1,6 +1,11 @@
-// ============================================================================
-// Scaffolding
-// ============================================================================
+
+// Title:         Scaffolding
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
+
 
 // Reset the box-sizing
 *,
