--- a/assets/stylesheets/source/global/global.scss
+++ b/assets/stylesheets/source/global/global.scss
@@ -1,10 +1,21 @@
-// ============================================================================
-// Global settings
-// ============================================================================
+
+// Title:         Global
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
 
 // Import global variables and mixins here. Anything that lives on this level
 // should be generic. If you have component-specific mixins or variables, they
 // should exist at the component level.
+
+// This file is only used to import other stylesheets. To add new styles, create
+// a new `.scss` file and import it below. All imported files should begin with
+// an underscore.
+
+// Imports
+// ----------------------------------------------------------------------------
 
 @import "mixins/mixins";
 @import "variables/variables";
