--- a/assets/stylesheets/source/global/mixins/mixins.scss
+++ b/assets/stylesheets/source/global/mixins/mixins.scss
@@ -1,2 +1,20 @@
+
+// Title:         Mixins
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
+
+// This file is only used to import other stylesheets. To add new styles, create
+// a new `.scss` file and import it below. All imported files should begin with
+// an underscore.
+
+// Imports
+// ----------------------------------------------------------------------------
+
+// Bourbon
 @import "bourbon/bourbon";
 @import "neat/neat";
+
+// CSS3
