--- a/assets/stylesheets/source/global/variables/_breakpoints.scss
+++ b/assets/stylesheets/source/global/variables/_breakpoints.scss
@@ -1,6 +1,13 @@
-// ============================================================================
-// Breakpoints
-// ============================================================================
+
+// Title:         Breakpoint variables
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
+
+// Default screen size breakpoints to use with media queries. Variables shouldn't
+// be created for one-off adjustments (ex: `@include media(min-width 456px)`)
 
 $screen-xs:                   480px !default;
 $screen-sm:                   768px !default;
