--- a/assets/stylesheets/source/global/variables/_colors.scss
+++ b/assets/stylesheets/source/global/variables/_colors.scss
@@ -1,9 +1,13 @@
-// ============================================================================
-// Color variables
-// ============================================================================
+
+// Title:         Color variables
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
 
 // Color variables declared in hsl() to allow for easy adjusting w/o an image
-// editor like Photoshop or Illustrator
+// editor. SASS will convert these values to HEX in the compiled CSS.
 // @source: http://css-tricks.com/yay-for-hsla/
 
 $gray-darker:           hsl(0, 0%, 12%) !default;
