--- a/assets/stylesheets/source/global/variables/_scaffolding.scss
+++ b/assets/stylesheets/source/global/variables/_scaffolding.scss
@@ -1,5 +1,9 @@
-// ============================================================================
-// Scaffolding variables
-// ============================================================================
+
+// Title:         Scaffolding variables
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
 
 $body-bg:               white;
