--- a/assets/stylesheets/source/global/variables/_type.scss
+++ b/assets/stylesheets/source/global/variables/_type.scss
@@ -1,6 +1,10 @@
-// ============================================================================
-// Typography variables
-// ============================================================================
+
+// Title:         Typography variables
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
 
 // Families
 $font-family-sans:        $helvetica !default;
