--- a/assets/stylesheets/source/global/variables/variables.scss
+++ b/assets/stylesheets/source/global/variables/variables.scss
@@ -1,6 +1,17 @@
-// ============================================================================
-// Variables
-// ============================================================================
+
+// Title:         Variables
+// Author:        Andy Smith
+// Source:        http://github/com/andyra/proto
+// License:       MIT License
+// Last Edited:   26 Feb 2014
+// Version:       0.1
+
+// This file is only used to import other stylesheets. To add new styles, create
+// a new `.scss` file and import it below. All imported files should begin with
+// an underscore.
+
+// Imports
+// ----------------------------------------------------------------------------
 
 // Base
 @import "colors";
