--- a/assets/stylesheets/source/global/global.scss
+++ b/assets/stylesheets/source/global/global.scss
@@ -17,5 +17,6 @@
 // Imports
 // ----------------------------------------------------------------------------
 
+@import "functions/functions";
 @import "mixins/mixins";
 @import "variables/variables";
