--- a/assets/stylesheets/source/global/functions/functions.scss
+++ b/assets/stylesheets/source/global/functions/functions.scss
@@ -1,9 +1,9 @@
 
-// Title:         Variables
+// Title:         Functions
 // Author:        Andy Smith
 // Source:        http://github/com/andyra/proto
 // License:       MIT License
-// Last Edited:   26 Feb 2014
+// Last Edited:   2 March 2014
 // Version:       0.1
 
 // This file is only used to import other stylesheets. To add new styles, create
@@ -13,13 +13,4 @@
 // Imports
 // ----------------------------------------------------------------------------
 
-// Base
-@import "colors";
-@import "scaffolding";
-// @import "type";
-@import "type-new";
-@import "grid";
-@import "breakpoints";
-
-// Components
-@import "components";
+@import "strip-unit";
