Work on new type

--- a/assets/stylesheets/source/global/functions/functions.scss
+++ b/assets/stylesheets/source/global/functions/functions.scss
@@ -13,4 +13,6 @@
 // Imports
 // ----------------------------------------------------------------------------
 
+@import "font-size";
 @import "strip-unit";
+@import "type-unit";
