--- a/assets/stylesheets/source/global/variables/variables.scss
+++ b/assets/stylesheets/source/global/variables/variables.scss
@@ -14,9 +14,9 @@
 // ----------------------------------------------------------------------------
 
 // Base
+@import "ratios";
 @import "colors";
 @import "scaffolding";
-// @import "type";
 @import "type-new";
 @import "grid";
 @import "breakpoints";
