--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -16,7 +16,7 @@
 
 // Body reset
 html {
-  font-size: 62.5%; // Effectively sets the font size to 10px
+  font-size: 62.5%; // Effectively sets the font size to base 10
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
